# easel

./: .gitignore  .travis.yml  00CHECKLIST  00README  BUGTRAX  COPYRIGHT  INSTALL  LICENSE  LICENSE.sh  LICENSE.tag  Makefile  Makefile.in  README.md  aclocal.m4  alphabet.c  alphabet.h  arm_vector.h  bioparse_paml.c  configure  configure.ac  decoy_config.h.in  dirichlet.c  dirichlet.h  dmatrix.c  dmatrix.h  easel.c  easel.h  easel.h.in  easel.tex  esl.h  esl_alloc.c  esl_alloc.md  esl_alphabet.c  esl_alphabet.h  esl_alphabet.tex  esl_altivec.c  esl_avx.c  esl_avx.h  esl_avx512.c  esl_avx512.h  (+243 more)
0.1/: configure.ac  easel.h  esl_dirichlet.c  esl_distance.c  esl_dmatrix.c  esl_getopts.c  esl_getopts.h  esl_gev.c  esl_gumbel.c  esl_histogram.c  esl_histogram.h  esl_hmm.c  esl_msa.c  esl_msa.h  esl_msafile_clustal.c  esl_recorder.c  esl_recorder.h  esl_sq.c  esl_sqio.h  esl_sqio.tex  esl_sqio_ascii.c  esl_sse.c  esl_sse.h  esl_ssi.c  esl_vectorops.h
0.6/: Makefile.in  configure.ac  easel.c  easel.tex  esl_alphabet.tex  esl_exponential.c  esl_fileparser.tex  esl_gev.c  esl_gumbel.c  esl_gumbel.h  esl_gumbel.tex  esl_histogram.c  esl_mixgev.c  esl_msa.c  esl_msa.tex  esl_sqio.tex  esl_stack.c  esl_stats.c  esl_stats.h  esl_stretchexp.tex  esl_weibull.tex
0.6/documentation/: Makefile  copyright.tex  intro.tex  main.tex  titlepage.tex
0.6/testsuite/: dmatrix-t1  parse-t1
0.7/: Makefile.in  dmatrix.c  dmatrix.h  esl_exponential.tex  esl_fileparser.h  esl_gamma.c  esl_gumbel.c  esl_histogram.c  esl_histogram.h  esl_hyperexp.c  esl_keyhash.c  esl_minimizer.c  esl_minimizer.tex  esl_msa.c  esl_msa.h  esl_random.c  esl_sqio.h  esl_stats.c  esl_wuss.c  interface_gsl.c  ratematrix.h
0.71/: Makefile.in  bioparse_paml.c  bioparse_paml.h  configure.ac  easel.c  easel.tex  esl_alphabet.c  esl_alphabet.tex  esl_config.h.in  esl_dmatrix.c  esl_exponential.tex  esl_getopts.h  esl_gev.c  esl_keyhash.c  esl_minimizer.c  esl_mixgev.c  esl_msa.c  esl_msa.tex  esl_random.h  esl_random.tex  esl_ssi.c  esl_stack.h  esl_stats.h  esl_stopwatch.c  esl_stretchexp.c  esl_tree.c  esl_vectorops.c  esl_vectorops.tex  esl_weibull.c  esl_wuss.c
0.8/: easel.c  easel.h  easel.tex  esl_alphabet.c  esl_alphabet.h  esl_dmatrix.tex  esl_exponential.tex  esl_gamma.c  esl_gev.c  esl_gumbel.c  esl_keyhash.tex  esl_minimizer.c  esl_msa.h  esl_msaweight.tex  esl_normal.h  esl_paml.c  esl_random.c  esl_random.h  esl_regexp.c  esl_scorematrix.h  esl_ssi.tex  esl_stats.c  esl_swat.c  esl_tree.c  esl_vectorops.c  esl_vectorops.tex
0.81/: esl_fileparser.h  esl_getopts.tex  esl_histogram.c  esl_mixgev.c  esl_msacluster.tex  esl_scorematrix.tex  esl_sqio.h
1.0/: 00README  Makefile.in  aclocal.m4  easel.c  esl_config.h.in  esl_exponential.h  esl_hyperexp.h  esl_mpi.c  esl_msa.c  esl_msa.h  esl_msaweight.h  esl_regexp.c  esl_sqio.c  esl_ssi.h  esl_stats.c  esl_stretchexp.c  interface_lapack.h
1.0.1/: esl_alphabet.h  esl_minimizer.h  esl_stack.c
1.0.2/: Makefile.in  esl_cluster.h  esl_getopts.tex  esl_histogram.c  esl_keyhash.c  esl_minimizer.c  esl_mixgev.c  esl_vmx.h  esl_wuss.c
1.0rc1/: esl_keyhash.tex  esl_mixgev.h  esl_msa.h  esl_stretchexp.h  esl_vectorops.c  esl_weibull.h
1.0rc2/: configure.ac  esl_gumbel.c  esl_scorematrix.c  interface_lapack.c
1.0rc3/: 00CHECKLIST  configure.ac  esl_sq.h
1.0rc4/: esl_dirichlet.h  esl_gamma.h  esl_getopts.h  esl_msacluster.c  esl_random.tex  esl_sqio.tex  esl_sse.c  esl_sse.h
1.0rc5/: esl_dirichlet.c  esl_rootfinder.c  esl_sqio.h
1.1/: Makefile.in  aclocal.m4  configure.ac  esl_alphabet.c  esl_buffer.c  esl_dirichlet.c  esl_distance.c  esl_dmatrix.c  esl_fileparser.c  esl_gumbel.c  esl_msa.c  esl_msafile.c  esl_msafile2.c  esl_random.c  esl_randomseq.h  esl_regexp.c  esl_rootfinder.c  esl_sqio_ascii.c  esl_sse.c  esl_stack.c  esl_stopwatch.h  esl_swat.c  esl_vectorops.c  esl_wuss.c
1.1.1/: esl_alphabet.h  esl_buffer.c  esl_config.h.in  esl_hyperexp.c  esl_msafile2.h  esl_scorematrix.c  esl_sqio.c
1.1rc1/: 00CHECKLIST  configure.ac  esl_fileparser.c  esl_msafile2.c  esl_msafile_a2m.h  esl_normal.h  esl_threads.c
1.1rc2/: COPYRIGHT  Makefile.in  esl_minimizer.c  esl_msaweight.c  esl_sq.c  esl_sse.c
1.1rc3/: configure.ac  easel.c  esl_histogram.h  esl_mem.c  esl_msacluster.c  esl_msacluster.h  esl_msafile_afa.h  esl_stopwatch.c  esl_workqueue.c
1.1rc4/: configure.ac  esl_histogram.c  esl_mpi.h  esl_msafile.h  esl_randomseq.c  esl_sqio.tex
3.0/: BUGTRAX  Makefile.in  aclocal.m4  easel.h  esl_alphabet.c  esl_alphabet.h  esl_dirichlet.c  esl_getopts.c  esl_gumbel.h  esl_keyhash.h  esl_mpi.c  esl_msa.c  esl_random.c  esl_random.h  esl_randomseq.c  esl_randomseq.h  esl_sq.c  esl_sqio_ascii.c  esl_ssi.c  esl_ssi.h  esl_tree.c  esl_workqueue.c  esl_wuss.h
3.0a1/: Makefile.in  esl_alphabet.c  esl_alphabet.h  esl_dmatrix.c  esl_getopts.h  esl_msa.h  esl_msaweight.c  esl_random.c  esl_randomseq.h  esl_sq.c
3.0a2/: Makefile.in  easel.c  esl_fileparser.h  esl_getopts.c  esl_hmm.c  esl_hmm.h  esl_hyperexp.c  esl_random.tex  esl_scorematrix.c  esl_scorematrix.h  esl_sq.c  esl_sqio.h  interface_gsl.c
3.0b1/: configure.ac  easel.c  esl_alphabet.c  esl_config.h.in  esl_dirichlet.c  esl_dirichlet.h  esl_gamma.c  esl_hmm.c  esl_mpi.h  esl_random.tex  esl_stats.c
3.0b2/: esl_distance.c  esl_getopts.c  esl_msaweight.c  esl_regexp.h  esl_sse.h  esl_vectorops.c
3.0b3/: esl_alphabet.c  esl_distance.h  esl_dmatrix.c  esl_minimizer.c  esl_msashuffle.h  esl_paml.h  esl_sqio.c  esl_stopwatch.h  esl_workqueue.c
3.0rc1/: LICENSE.csh.in  configure.ac  esl_gev.h  esl_histogram.c  esl_sqio.c  esl_sqio_ascii.c  esl_sqio_ncbi.h  esl_sse.c
3.0rc2/: easel.c  esl_cluster.c  esl_dirichlet.c  esl_distance.c  esl_getopts.c  esl_hmm.c  esl_msa.c  esl_sq.h  esl_sqio.c  esl_threads.c
3.1/: Makefile.in  easel.c  easel.h  esl_alphabet.c  esl_dirichlet.h  esl_distance.h  esl_dmatrix.h  esl_exponential.c  esl_fileparser.c  esl_gencode.c  esl_gev.c  esl_hmm.c  esl_mem.c  esl_mpi.c  esl_msa.h  esl_msafile.c  esl_msafile2.c  esl_msafile_phylip.c  esl_msafile_psiblast.h  esl_regexp.c  esl_sq.c  (+7 more)
(+352 files in other folders)
